contact us heading align fix

--- a/sites/all/themes/cleancanvas/assets/css/custom.css
+++ b/sites/all/themes/cleancanvas/assets/css/custom.css
@@ -1083,3 +1083,15 @@ body.page-user-login-2 #footer{
    margin-left:0px;
  }
 }
+
+.region-footer-thirdcolumn .messages ul li {
+   float: left !important;
+}
+
+.region-footer-thirdcolumn .headline {
+  text-align:left;
+}
+
+#footer .credits {
+  margin-top:50px;
+}
